force-app/main/default/objects/Speaker__c/fields/Speaker_Information__c.field-meta.xml
<CustomField>
    <fullName>Speaker_Information__c</fullName>
    <label>Speaker Information</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>