force-app/main/default/objects/Speaker__c/fields/Speaker_Role__c.field-meta.xml
<CustomField>
    <fullName>Speaker_Role__c</fullName>
    <label>Speaker Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Designer</fullName>
                <default>true</default>
                <label>Designer</label>
            </value>
            <value>
                <fullName>Business Analyst</fullName>
            </value>
            <value>
                <fullName>Developer</fullName>
            </value>
            <value>
                <fullName>Manager</fullName>
            </value>
            <value>
                <fullName>Architect</fullName>
            </value>
            <value>
                <fullName>CEO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>