force-app/main/default/objects/Speaker__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Speaker_Type__c</columns>
    <columns>NAME</columns>
    <columns>Speaker_Name__c</columns>
    <columns>Speaker_Title__c</columns>
    <columns>Email__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>